--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,12 @@
         "name": "Stephen Coakley",
         "email": "me@stephencoakley.com"
     }],
+    "repositories": [
+    {
+        "type": "vcs",
+        "url": "https://github.com/arteq/phpws"
+    }
+    ],
     "require": {
         "php": ">=5.5",
         "devristo/phpws": "dev-master",
